# envoy

./: .bazelrc  .gitignore  BAZEL8_UPGRADE.md  BZLMOD_CI_CD.md  BZLMOD_MIGRATION.md  BZLMOD_MIGRATION_GUIDE.md  BZLMOD_MIGRATION_REVIEW.md  BZLMOD_QUICK_START.md  BZLMOD_RECOMMENDATIONS.md  BZLMOD_STATUS.md  CODEOWNERS  MODULE.bazel  OPENTELEMETRY_MUTUALIZATION_PLAN.md  PR_SUMMARY.md  SECURITY-INSIGHTS.yml  THIRD_PARTY_MIGRATION.md  WORKSPACE  WORKSPACE.bzlmod
.bcr/: README.md  metadata.template.json  prepare-bcr-submission.sh  presubmit.template.yml  source.template.json
.github/: dependabot.yml
.github/workflows/: _publish_release.yml  _request.yml  _request_cache_bazel.yml  _request_cache_docker.yml  _run.yml  codeql-daily.yml  codeql-push.yml  envoy-bzlmod-ci.yml  envoy-dependency.yml
api/: MODULE.bazel  MODULE.bazel.backup  WORKSPACE.bzlmod  deps.go
api/bazel/: BUILD  api_build_system.bzl  api_cc_py_proto_library.bzl  api_proto_package.bzl  envoy_http_archive.bzl  proto_library.bzl  proto_package.bzl  repositories.bzl  repository_locations.bzl
api/bazel/cc_proto_descriptor_library/: builddefs.bzl
api/bazel/extensions/: BUILD  api_binding.bzl  api_dependencies.bzl  api_dependencies_main.bzl
api/envoy/api/v2/: cds.proto  eds.proto  lds.proto  rds.proto
api/envoy/config/trace/v3/: opentelemetry.proto
api/envoy/service/accesslog/v2/: als.proto
api/envoy/service/discovery/v2/: ads.proto  hds.proto  rtds.proto
api/envoy/service/metrics/v2/: metrics_service.proto
api/envoy/service/ratelimit/v2/: rls.proto
api/test/validate/: BUILD
bazel/: ASPECT_BAZEL_LIB_TOOLCHAINS.md  BUILD  BZLMOD_MIGRATION.md  DEPENDENCY_ANALYSIS.md  EXTERNAL_DEPS.md  api_binding.bzl  api_repositories.bzl  dependency_imports.bzl  dependency_imports_extra.bzl  envoy_internal.bzl  extensions.bzl  grpc.patch  jwt_verify_lib.patch  native_binding_wrapper.bzl  protobuf.patch  protovalidate_cc.patch  proxy_wasm_cpp_host.patch  python_dependencies.bzl  repo.bzl  repositories.bzl  repositories_extra.bzl  repository_locations.bzl
bazel/bzlmod_analysis/: README.md  analyze_bcr_status.py  analyze_dependencies.py  bcr_analysis.md
bazel/extensions/: BUILD  api_binding.bzl  api_dependencies_main.bzl  core.bzl  dependencies.bzl  dependencies_extra.bzl  dependency_imports.bzl  dependency_imports_extra.bzl  repo.bzl  toolchains.bzl
bazel/extensions/private/: BUILD
bazel/extensions/public/: BUILD  api_binding.bzl  api_dependencies.bzl  api_dependencies_main.bzl  dependencies.bzl  dependencies_extra.bzl  dependency_imports.bzl  dependency_imports_extra.bzl  envoy_android.bzl  envoy_android_workspace.bzl  envoy_mobile.bzl  envoy_mobile_repos.bzl  envoy_mobile_toolchains.bzl  envoy_mobile_workspace.bzl  repo.bzl
bazel/foreign_cc/: BUILD  cel-cpp.patch
changelogs/: current.yaml
ci/: do_ci.sh
distribution/binary/: BUILD
distribution/docker/: Dockerfile-envoy
docs/: bzlmod_migration.md  bzlmod_migration.md.backup  extension_consolidation_migration.md
docs/root/start/migrating/: bzlmod.md
docs/tools/python/: requirements.txt
examples/bzlmod/: README.md
mobile/: MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod
mobile/bazel/: android_configure.bzl  envoy_mobile_dependencies.bzl  envoy_mobile_repositories.bzl  envoy_mobile_toolchains.bzl  envoy_mobile_workspace.bzl  extensions.bzl
mobile/bazel/extensions/: BUILD  android.bzl  android_workspace.bzl  core.bzl  envoy_android.bzl  envoy_android_workspace.bzl  envoy_mobile.bzl  envoy_mobile_repos.bzl  envoy_mobile_toolchains.bzl  envoy_mobile_workspace.bzl  mobile.bzl  mobile_core.bzl  mobile_toolchains.bzl  repos.bzl  toolchains.bzl  workspace.bzl
mobile/envoy_build_config/: MODULE.bazel  extensions_build_config.bzl
mobile/test/cc/: BUILD
mobile/test/cc/integration/: BUILD
mobile/test/common/http/filters/test_event_tracker/: BUILD
scripts/: bzlmod_validation.sh
source/common/opentelemetry/: BUILD  OPENTELEMETRY_MUTUALIZATION_PLAN.md  README.md  otlp_utils.cc  otlp_utils.h  protocol_constants.h  types.h
source/common/opentelemetry/collector/: BUILD  README.md  otlp_utils.cc  otlp_utils.h
source/common/opentelemetry/logs/: BUILD  README.md  constants.h  types.h
source/common/opentelemetry/metrics/: BUILD  README.md  constants.h  types.h
source/common/opentelemetry/proto/: BUILD  README.md  otlp_utils.cc  otlp_utils.h
source/common/opentelemetry/traces/: BUILD  README.md  constants.h  types.h
source/common/quic/: BUILD
source/extensions/access_loggers/open_telemetry/: BUILD  access_log_proto_descriptors.cc  grpc_access_log_impl.cc  grpc_access_log_impl.h  http_access_log_impl.cc  otlp_log_utils.cc  otlp_log_utils.h
source/extensions/common/opentelemetry/: ALIGNMENT_ANALYSIS.md  BUILD  README.md  otlp_utils.cc  otlp_utils.h  populate_attribute_utils.cc  populate_attribute_utils.h  types.h
source/extensions/common/wasm/: BUILD
source/extensions/opentelemetry/: BUILD
source/extensions/opentelemetry/exporters/: BUILD
source/extensions/opentelemetry/sdk/: BUILD  README.md
source/extensions/propagators/: BUILD  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.md  README.md  SPECIFICATION_COMPLIANCE.md  TESTING_GUIDE.md  examples.h  generic_propagator.cc  generic_propagator.h  generic_propagator_factory.cc  generic_propagator_factory.h  propagator.cc  propagator.h  propagator_adapter.cc  propagator_adapter.h  propagator_constants.h  propagator_factory.cc  propagator_factory.h  propagator_factory_helper.h  propagator_interface.h  trace_context.cc  trace_context.h  type_converter.cc  type_converter.h
test/: run_envoy_bazel_coverage.sh
test/extensions/propagators/: BUILD  composite_propagator_test.cc  propagator_constants_test.cc  propagator_factory_test.cc
test/extensions/tracers/: BUILD  w3c_propagator_integration_test.cc
test/fuzz/: BUILD
tools/: bzlmod_validate.sh
tools/base/: requirements.in  requirements.txt
tools/coverage/: BUILD  report_generator.sh.template
tools/proto_format/: format_api.py  proto_format.sh
tools/protoshared/: protoshared.bzl
tools/tarball/: BUILD
tools/zstd/: BUILD
(+324 files in other folders)
