module(
    name = "envoy",
    version = "0.0.0-dev",
)

# Minimal bzlmod migration - only dependencies without patches
# Dependencies with patches remain in WORKSPACE.bzlmod and extensions
#
# Note: Legacy //external: references are now redirected to //third_party: 
# compatibility layer. New code should use direct @repo//:target dependencies.
# See THIRD_PARTY_MIGRATION.md for details.

bazel_dep(
    name = "bazel_features",
    version = "1.33.0",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)

# Clean dependencies without patches that can be safely migrated
bazel_dep(
    name = "fmt",
    version = "11.2.0",
    repo_name = "com_github_fmtlib_fmt",
)
bazel_dep(
    name = "gazelle",
    version = "0.45.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "google_benchmark",
    version = "1.9.4",
    repo_name = "com_github_google_benchmark",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20241220-5e258e33.bcr.1",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "protoc-gen-validate",
    version = "1.2.1.bcr.1",
    repo_name = "com_envoyproxy_protoc_gen_validate",
)
bazel_dep(
    name = "spdlog",
    version = "1.15.3",
    repo_name = "com_github_gabime_spdlog",
)
bazel_dep(
    name = "xxhash",
    version = "0.8.3",
    repo_name = "com_github_cyan4973_xxhash",
)

# Additional clean dependencies that can be migrated
bazel_dep(
    name = "rules_python",
    version = "0.35.0",
)
bazel_dep(
    name = "rules_cc",
    version = "0.1.4",
)
bazel_dep(
    name = "rules_go",
    version = "0.53.0",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "rules_license",
    version = "1.0.0",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.1.0",
)
bazel_dep(
    name = "rules_shell",
    version = "0.5.1",
)
bazel_dep(
    name = "rules_shellcheck",
    version = "0.3.3",
    repo_name = "com_github_aignas_rules_shellcheck",
)

# Local module overrides for internal Envoy modules
bazel_dep(
    name = "envoy_api",
    version = "0.0.0-dev",
)
bazel_dep(
    name = "envoy_build_config",
    version = "0.0.0-dev",
)

local_path_override(
    module_name = "envoy_api",
    path = "api",
)

local_path_override(
    module_name = "envoy_build_config",
    path = "mobile/envoy_build_config",
)

switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
    go = True,
    grpc = True,
    python = True,
)
use_repo(switched_rules, "com_google_googleapis_imports")

# Envoy dependencies extensions - organized in dedicated extensions directory
envoy_deps = use_extension("//bazel/extensions:dependencies.bzl", "dependencies")
# Core repository definitions

envoy_deps_extra = use_extension("//bazel/extensions:dependencies_extra.bzl", "dependencies_extra")  
# Second-stage dependencies

envoy_imports = use_extension("//bazel/extensions:dependency_imports.bzl", "dependency_imports")
# Toolchain imports and registrations

envoy_imports_extra = use_extension("//bazel/extensions:dependency_imports_extra.bzl", "dependency_imports_extra")
# Additional dependency imports

# Repository setup extension
envoy_repo_setup = use_extension("//bazel/extensions:repo.bzl", "repo")
# Repository metadata setup

# Python dependencies using upstream rules_python extensions (replaces custom envoy_python_dependencies_ext)
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "base_pip3", 
    python_version = "3.12",
    requirements_lock = "//tools/base:requirements.txt",
    extra_pip_args = ["--require-hashes"],
)
pip.parse(
    hub_name = "dev_pip3",
    python_version = "3.12", 
    requirements_lock = "//tools/dev:requirements.txt",
    extra_pip_args = ["--require-hashes"],
)
pip.parse(
    hub_name = "fuzzing_pip3",
    python_version = "3.12",
    requirements_lock = "@rules_fuzzing//fuzzing:requirements.txt", 
    extra_pip_args = ["--require-hashes"],
)

use_repo(
    pip,
    "base_pip3",
    "dev_pip3", 
    "fuzzing_pip3",
)

# Python toolchain setup using upstream extension (replaces system_python from custom extension)
python_configure = use_extension("@rules_python//python/extensions:python.bzl", "python")
python_configure.toolchain(python_version = "3.7")  # minimum version requirement
