module(
    name = "envoy",
    version = "0.0.0-dev",
)

# Minimal bzlmod migration - only dependencies without patches
# Dependencies with patches remain in WORKSPACE.bzlmod and extensions
#
# Note: Legacy //external: references are now redirected to //third_party:
# compatibility layer. New code should use direct @repo//:target dependencies.
# See THIRD_PARTY_MIGRATION.md for details.
bazel_dep(
    name = "aspect_rules_js",
    version = "2.5.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.8.1",
)
bazel_dep(
    name = "bazel_features",
    version = "1.33.0",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)

# Clean dependencies without patches that can be safely migrated
bazel_dep(
    name = "fmt",
    version = "11.2.0",
    repo_name = "com_github_fmtlib_fmt",
)
bazel_dep(
    name = "gazelle",
    version = "0.45.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "google_benchmark",
    version = "1.9.4",
    repo_name = "com_github_google_benchmark",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20241220-5e258e33.bcr.1",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "protoc-gen-validate",
    version = "1.2.1.bcr.1",
    repo_name = "com_envoyproxy_protoc_gen_validate",
)
bazel_dep(
    name = "re2",
    version = "2023-11-01",
    repo_name = "com_googlesource_code_re2",
)
bazel_dep(
    name = "spdlog",
    version = "1.15.3",
    repo_name = "com_github_gabime_spdlog",
)
bazel_dep(
    name = "xxhash",
    version = "0.8.3",
    repo_name = "com_github_cyan4973_xxhash",
)

# Additional clean dependencies that can be migrated
bazel_dep(
    name = "rules_python",
    version = "0.35.0",
)
bazel_dep(
    name = "rules_buf",
    version = "0.5.1",
)
bazel_dep(
    name = "rules_cc",
    version = "0.1.4",
)
bazel_dep(
    name = "rules_go",
    version = "0.53.0",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "rules_license",
    version = "1.0.0",
)
bazel_dep(
    name = "rules_nodejs",
    version = "6.5.0",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.1.0",
)
bazel_dep(
    name = "rules_proto",
    version = "7.1.0",
)
bazel_dep(
    name = "rules_shell",
    version = "0.5.1",
)
bazel_dep(
    name = "rules_shellcheck",
    version = "0.3.3",
    repo_name = "com_github_aignas_rules_shellcheck",
)

# Clean dependencies migrated from extensions (no patches, available in BCR)
bazel_dep(
    name = "boringssl",
    version = "0.20250514.0",
)
bazel_dep(
    name = "zstd",
    version = "1.5.7",
    repo_name = "com_github_facebook_zstd",
)
bazel_dep(
    name = "yaml-cpp",
    version = "0.8.0",
    repo_name = "com_github_jbeder_yaml_cpp",
)
bazel_dep(
    name = "lz4",
    version = "1.10.0",
    repo_name = "com_github_lz4_lz4",
)
bazel_dep(
    name = "nlohmann_json",
    version = "3.12.0",
    repo_name = "com_github_nlohmann_json",
)
bazel_dep(
    name = "brotli",
    version = "1.1.0",
    repo_name = "org_brotli",
)
bazel_dep(
    name = "boost",
    version = "1.84.0",
    repo_name = "org_boost",
)

# Local module overrides for internal Envoy modules
bazel_dep(
    name = "envoy_api",
    version = "0.0.0-dev",
)
bazel_dep(
    name = "envoy_build_config",
    version = "0.0.0-dev",
)

local_path_override(
    module_name = "envoy_api",
    path = "api",
)

local_path_override(
    module_name = "envoy_build_config",
    path = "mobile/envoy_build_config",
)

switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
    go = True,
    grpc = True,
    python = True,
)
use_repo(switched_rules, "com_google_googleapis_imports")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(
    sha256 = "5790beb45aaf51a6d7e68ca2255b22e1b14c9ae405a6c472cdcfc228c66abfc1",
    version = "v1.56.0",
)
use_repo(buf, "rules_buf_toolchains")

# Envoy dependencies extensions - organized in dedicated extensions directory
envoy_deps = use_extension("//bazel/extensions:dependencies.bzl", "dependencies")

# Core repository definitions
use_repo(
    envoy_deps,
    "aspect_bazel_lib",
    "aws_lc",
    "bazel_toolchains",
    "boringssl_fips",
    "build_bazel_rules_apple",
    "com_github_alibaba_hessian2_codec",
    "com_github_awslabs_aws_c_auth",
    "com_github_chrusty_protoc_gen_jsonschema",
    "com_github_axboe_liburing",
    "com_github_bazelbuild_buildtools",
    "com_github_c_ares_c_ares",
    "com_github_datadog_dd_trace_cpp",
    "com_github_envoyproxy_sqlparser",
    "com_github_fdio_vpp_vcl",
    "com_github_google_jwt_verify",
    "com_github_google_libprotobuf_mutator",
    "com_github_google_libsxg",
    "com_github_google_perfetto",
    "com_github_google_quiche",
    "com_github_google_tcmalloc",
    "com_github_gperftools_gperftools",
    "com_github_grpc_grpc",
    "com_github_intel_ipp_crypto_crypto_mb",
    "com_github_intel_qatlib",
    "com_github_intel_qatzip",
    "com_github_libevent_libevent",
    "com_github_luajit_luajit",
    "com_github_maxmind_libmaxminddb",
    "com_github_mirror_tclap",
    "com_github_msgpack_cpp",
    "com_github_ncopa_suexec",
    "com_github_nghttp2_nghttp2",
    "com_github_openhistogram_libcircllhist",
    "com_github_qat_zstd",
    "com_github_skyapm_cpp2sky",
    "com_github_unicode_org_icu",
    "com_github_wamr",
    "com_github_wasmtime",
    "com_github_zlib_ng_zlib_ng",
    "com_google_absl",
    "com_google_cel_cpp",
    "com_google_cel_spec",
    "com_google_googletest",
    "com_google_protobuf",
    "com_googlesource_googleurl",
    "confluentinc_librdkafka",
    "dragonbox",
    "emsdk",
    "envoy_examples",
    "envoy_toolshed",
    "fast_float",
    "fips_cmake_linux_aarch64",
    "fips_cmake_linux_x86_64",
    "fips_go_linux_amd64",
    "fips_go_linux_arm64",
    "fips_ninja",
    "fp16",
    "highway",
    "intel_dlb",
    "intel_ittapi",
    "io_hyperscan",
    "io_opentelemetry_cpp",
    "io_vectorscan",
    "kafka_server_binary",
    "kafka_source",
    "libpfm",
    "net_colm_open_source_colm",
    "net_colm_open_source_ragel",
    "net_zlib",
    "org_llvm_releases_compiler_rt",
    "proxy_wasm_cpp_host",
    "proxy_wasm_cpp_sdk",
    "proxy_wasm_rust_sdk",
    "rules_foreign_cc",
    "rules_fuzzing",
    "rules_java",
    "rules_proto_grpc",
    "rules_ruby",
    "rules_rust",
    "simdutf",
    "skywalking_data_collect_protocol",
    "v8",
)

envoy_imports = use_extension("//bazel/extensions:dependency_imports.bzl", "dependency_imports")

# Toolchain imports and registrations
use_repo(
    envoy_imports,
    "bazel_features_globals",
    "bazel_features_version",
    "dynamic_modules_rust_sdk_crate_index",
    "proto_bazel_features",
    "rules_fuzzing_oss_fuzz",
    "rules_python_internal",
)

envoy_imports_extra = use_extension("//bazel/extensions:dependency_imports_extra.bzl", "dependency_imports_extra")
# Additional dependency imports

# Repository setup extension
envoy_repo_setup = use_extension("//bazel/extensions:repo.bzl", "repo")

# Repository metadata setup
use_repo(
    envoy_repo_setup,
    "envoy_repo",
)

# Python dependencies using upstream rules_python extensions (replaces custom envoy_python_dependencies_ext)
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    extra_pip_args = ["--require-hashes"],
    hub_name = "base_pip3",
    python_version = "3.12",
    requirements_lock = "//tools/base:requirements.txt",
)
pip.parse(
    extra_pip_args = ["--require-hashes"],
    hub_name = "dev_pip3",
    python_version = "3.12",
    requirements_lock = "//tools/dev:requirements.txt",
)
pip.parse(
    extra_pip_args = ["--require-hashes"],
    hub_name = "fuzzing_pip3",
    python_version = "3.12",
    requirements_lock = "@rules_fuzzing//fuzzing:requirements.txt",
)
use_repo(
    pip,
    "base_pip3",
    "dev_pip3",
    "fuzzing_pip3",
)
