module(
    name = "envoy_api",
    version = "0.0.0-dev",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.8.1",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20241220-5e258e33.bcr.1",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "grpc",
    version = "1.72.0",
    repo_name = "com_github_grpc_grpc",
)
bazel_dep(
    name = "protoc-gen-validate",
    version = "1.2.1.bcr.1",
    repo_name = "com_envoyproxy_protoc_gen_validate",
)
bazel_dep(
    name = "rules_go",
    version = "0.53.0",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "rules_proto",
    version = "7.1.0",
)

switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
    go = True,
    grpc = True,
    python = True,
)
use_repo(switched_rules, "com_google_googleapis_imports")

# API dependencies extension - using local module
envoy_api_deps = use_extension("//bazel/extensions:api_dependencies.bzl", "api_dependencies")
# Handles API-specific dependencies and external archives

# API binding extension - using local module  
envoy_api_binding = use_extension("//bazel/extensions:api_binding.bzl", "api_binding")
# Handles API repository binding and setup
