module(
    name = "envoy_mobile",
    version = "1.37.0-dev",
)

# All bazel_dep entries are organized alphabetically for improved readability.
# Core Envoy dependencies - inherited from parent module
bazel_dep(name = "envoy", version = "1.37.0-dev")
bazel_dep(name = "envoy_api", version = "1.37.0-dev")
bazel_dep(name = "envoy_build_config", version = "1.37.0-dev")

# Mobile-specific dependencies from Bazel Central Registry
bazel_dep(name = "apple_support", version = "1.23.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_android", version = "0.6.0")
bazel_dep(name = "rules_android_ndk", version = "0.1.2")
bazel_dep(name = "rules_apple", version = "3.15.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_kotlin", version = "2.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")
bazel_dep(name = "rules_swift", version = "2.3.0", repo_name = "build_bazel_rules_swift")

# Local module overrides
local_path_override(
    module_name = "envoy",
    path = "..",
)

local_path_override(
    module_name = "envoy_api",
    path = "../api",
)

local_path_override(
    module_name = "envoy_build_config",
    path = "envoy_build_config",
)
